# gn-build-py

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  build_and_push.sh  gen_setup_cfg.py  setup.cfg  setup.cfg.template  setup.py  tox.ini
