[metadata]
name = gn-build-py
version = 2131
description = Python wrapper around invoking gn (https://gn.googlesource.com/gn/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kinddragon/gn-build-py
author = Arkady Skapkin
author_email = arkady.shapkin@gmail.com
license = MIT
license_files = LICENSE
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires = 
	setuptools-download

[setuptools_download]
download_scripts = 
	[gn]
	group = gn-binary
	marker = sys_platform == "linux" and platform_machine == "x86_64"
	url = https://chrome-infra-packages.appspot.com/dl/gn/gn/linux-amd64/+/H5CaqrpIqpNrv4oKyJ2F1YUXzYtp8BMgaiJKaiYXT9EC
	sha256 = 1f909aaaba48aa936bbf8a0ac89d85d58517cd8b69f013206a224a6a26174fd1
	extract = zip
	extract_path = gn
	[gn]
	group = gn-binary
	marker = sys_platform == "linux" and platform_machine == "aarch64"
	url = https://chrome-infra-packages.appspot.com/dl/gn/gn/linux-arm64/+/Ye4-iKZt-z5EBX4YrGTPxDwMS-HV2P6_Wi-EDtuDUyIC
	sha256 = 61ee3e88a66dfb3e44057e18ac64cfc43c0c4be1d5d8febf5a2f840edb835322
	extract = zip
	extract_path = gn
	[gn]
	group = gn-binary
	marker = sys_platform == "darwin" and platform_machine == "x86_64"
	url = https://chrome-infra-packages.appspot.com/dl/gn/gn/mac-amd64/+/mZLGbOQCoVFr_RArVxr6WqLYy4RHWl5mIKzn1IoD7W4C
	sha256 = 9992c66ce402a1516bfd102b571afa5aa2d8cb84475a5e6620ace7d48a03ed6e
	extract = zip
	extract_path = gn
	[gn]
	group = gn-binary
	marker = sys_platform == "darwin" and platform_machine == "arm64"
	url = https://chrome-infra-packages.appspot.com/dl/gn/gn/mac-arm64/+/7T4sYWS14QAilWt0wxyaVqyR-4cybM0fO11aTnwR0LMC
	sha256 = ed3e2c6164b5e10022956b74c31c9a56ac91fb87326ccd1f3b5d5a4e7c11d0b3
	extract = zip
	extract_path = gn
	[gn]
	group = gn-binary
	marker = sys_platform == "win32" and platform_machine == "AMD64"
	url = https://chrome-infra-packages.appspot.com/dl/gn/gn/windows-amd64/+/c_1UmpG2dBwNKeM3eoLDFLR3vMWOjOJ57peoJJznaF8C
	sha256 = 73fd549a91b6741c0d29e3377a82c314b477bcc58e8ce279ee97a8249ce7685f
	extract = zip
	extract_path = gn.exe

